💄 1) Removed padding and fixes cast scrollbar

--- a/src/app/pages/MovieDetails/MovieDetails.module.css
+++ b/src/app/pages/MovieDetails/MovieDetails.module.css
@@ -1,11 +1,10 @@
 .container {
   display: grid;
   height: 100vh;
-  padding: 1em;
-  grid-gap: 1em;
 }
 .main {
   overflow: scroll;
+  padding-bottom: 4em;
 }
 
 .main::-webkit-scrollbar {
@@ -30,6 +29,10 @@
   width: 100%;
   grid-auto-flow: column;
   overflow: scroll;
+}
+
+.artistCards::-webkit-scrollbar {
+  display: none;
 }
 
 .navBar {
